pyarmor.error.log
31300 MainProcess 2023-07-13 17:14:55,016
Traceback (most recent call last):
  File "/home/muhammad/.local/lib/python3.9/site-packages/pyarmor/cli/__main__.py", line 698, in main
    main_entry(sys.argv[1:])
  File "/home/muhammad/.local/lib/python3.9/site-packages/pyarmor/cli/__main__.py", line 686, in main_entry
    args.func(ctx, args)
  File "/home/muhammad/.local/lib/python3.9/site-packages/pyarmor/cli/__main__.py", line 225, in cmd_gen
    builder.process(options)
  File "/home/muhammad/.local/lib/python3.9/site-packages/pyarmor/cli/generate.py", line 156, in process
    self._obfuscate_scripts()
  File "/home/muhammad/.local/lib/python3.9/site-packages/pyarmor/cli/generate.py", line 119, in _obfuscate_scripts
    code = Pytransform3.generate_obfuscated_script(self.ctx, r)
  File "/home/muhammad/.local/lib/python3.9/site-packages/pyarmor/cli/core/__init__.py", line 103, in generate_obfuscated_script
    return m.generate_obfuscated_script(ctx, res)
  File "<maker>", line 871, in generate_obfuscated_script
  File "/home/muhammad/.local/lib/python3.9/site-packages/pyarmor/cli/__init__.py", line 16, in process
    return meth(self, res, *args, **kwargs)
  File "<maker>", line 575, in process
  File "/home/muhammad/.local/lib/python3.9/site-packages/pyarmor/cli/resource.py", line 118, in reparse
    self.mtree = ast.parse(''.join(lines), self.frozenname, 'exec')
  File "/usr/lib/python3.9/ast.py", line 50, in parse
    return compile(source, filename, mode, flags,
  File "<frozen git_ninja>", line 103
    if count = 3:
             ^
SyntaxError: invalid syntax
